Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,7 +3,7 @@ title: "Silicon Valley's Best Real Estate Training"
 description: Brett Jennings, a top Real Estate Agent in Silicon Valley, shares his own internal real estate agent training for free. His Real Estate Training, Tips and Advice will help you sell more homes in less time.
 show_custom_links: true
 custom_links:
-  - title: Join Our Team
+  - title: Join Us
     url: http://therealexperts.com/careers
   - title: Free Strategy Call
     url: /strategy-call/
