Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -48,7 +48,7 @@ lender:
 
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/BrettJenningsRealEstateExperts
+  facebook_url: https://www.facebook.com/groups/377582376133886/?source_id=207449165970438
   linkedin_url: https://www.linkedin.com/in/brettjennings/
   gplus_url:
   youtube_url: https://www.youtube.com/user/TheBrettJenningsTeam?feature=watch
