Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -24,7 +24,7 @@ client:
 
     Described by his peers and clients as energetic, focused, determined, and engaged, Brett always goes above and beyond. He provides his buyers access to his curated list of over 250 off-market properties, and his sellers benefit from his market-proven home selling process that has set record-breaking prices in almost every neighborhood he sells in. His best-selling book, The New Rise in Real Estate, serves as a further resource for clients wanting to make the most of the current market.
   market: Silicon Valley
-  brand: Brett Jennings Real Estate Experts
+  brand: Real Estate Experts
   brokerage:
   address: 910 E Hamilton Ave, Suite 130 , Cambell Ca 95008
   phone: 408-596-4490
