--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -73,7 +73,7 @@ images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
-  hero_text: Silicon Valley Real Estate Video Blog
+  hero_text: Our Mission on this site is to educate Real Estate Agents on how to sell more homes.
   hero_background_hex: '#999'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
@@ -91,7 +91,7 @@ header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: transparent
+  shadow_color: '#364F81'
 
 buttons:
   button_radius_number: 0
