Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,7 +10,7 @@ custom_links:
   - title: Free Newsletter
     url: /subscribe/
   - title: Monthly Mastermind
-    url: http://thrivethroughtheshift.com/
+    url: https://docs.google.com/forms/d/e/1FAIpQLSdupJkt2cjDwMzfiFaH0Sl7SdLa_cPfnolaCEiGE5O6_84HSA/viewform
   - title: Join Us
     url: http://therealexperts.com/careers
 
