--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,106 +1,131 @@
 audit_header: false
-title: "Silicon Valley's Best Real Estate Training"
-description: Brett Jennings, a top Real Estate Agent in Silicon Valley, shares his own internal real estate agent training for free. His Real Estate Training, Tips and Advice will help you sell more homes in less time.
+title: Silicon Valley's Best Real Estate Training
+description: >-
+  Brett Jennings, a top Real Estate Agent in Silicon Valley, shares his own
+  internal real estate agent training for free. His Real Estate Training, Tips
+  and Advice will help you sell more homes in less time.
 show_custom_links: true
 custom_links:
   - title: Who We Are
-    url: https://www.therealexperts.com/who-we-are/
+    url: 'https://www.therealexperts.com/who-we-are/'
   - title: Free Strategy Call
     url: /strategy-call/
   - title: Free Newsletter
     url: /subscribe/
   - title: Monthly Mastermind
-    url: https://docs.google.com/forms/d/e/1FAIpQLSdupJkt2cjDwMzfiFaH0Sl7SdLa_cPfnolaCEiGE5O6_84HSA/viewform
+    url: >-
+      https://docs.google.com/forms/d/e/1FAIpQLSdupJkt2cjDwMzfiFaH0Sl7SdLa_cPfnolaCEiGE5O6_84HSA/viewform
   - title: Join Us
-    url: http://therealexperts.com/careers
-
-
+    url: 'http://therealexperts.com/careers'
 client:
   name: Brett Jennings
   title:
   license_number:
-  about_markdown: |
-    Brett Jennings is the owner and founder of Brett Jennings Real Estate Experts. Brett is an award-winning luxury home marketing specialist and also holds a certificate in negotiation from Harvard Law. In 2017, the Wall Street Journal recognized Brett and his team as one of the top 250 real estate groups in the United States. With over one million agents in the country, this prestigious award places Brett in the top 1/10th of the top 1% among his peers.
+  about_markdown: >-
+    Brett Jennings is the owner and founder of Brett Jennings Real Estate
+    Experts. Brett is an award-winning luxury home marketing specialist and also
+    holds a certificate in negotiation from Harvard Law. In 2017, the Wall
+    Street Journal recognized Brett and his team as one of the top 250 real
+    estate groups in the United States. With over one million agents in the
+    country, this prestigious award places Brett in the top 1/10th of the top 1%
+    among his peers.
 
-    Although these statistics are impressive, Brett’s true passion is helping people make smart real estate decisions that positively transform their lives. His extensive background in real estate, finance, and life coaching enables him to draw from a deep well of life experience as he helps his clients make informed, intelligent decisions. In a fluctuating real estate landscape, the expertise and attention he provides are necessary and rare.
 
-    Described by his peers and clients as energetic, focused, determined, and engaged, Brett always goes above and beyond. He provides his buyers access to his curated list of over 250 off-market properties, and his sellers benefit from his market-proven home selling process that has set record-breaking prices in almost every neighborhood he sells in. His best-selling book, The New Rise in Real Estate, serves as a further resource for clients wanting to make the most of the current market.
+    Although these statistics are impressive, Brett’s true passion is helping
+    people make smart real estate decisions that positively transform their
+    lives. His extensive background in real estate, finance, and life coaching
+    enables him to draw from a deep well of life experience as he helps his
+    clients make informed, intelligent decisions. In a fluctuating real estate
+    landscape, the expertise and attention he provides are necessary and rare.
+
+
+    Described by his peers and clients as energetic, focused, determined, and
+    engaged, Brett always goes above and beyond. He provides his buyers access
+    to his curated list of over 250 off-market properties, and his sellers
+    benefit from his market-proven home selling process that has set
+    record-breaking prices in almost every neighborhood he sells in. His
+    best-selling book, The New Rise in Real Estate, serves as a further resource
+    for clients wanting to make the most of the current market.
   market: Silicon Valley
-  brand: Real Estate Experts
+  brand: 'Real Estate Experts | DRE #01761522'
   brokerage:
-  address: 910 E Hamilton Ave, Suite 130 , Cambell Ca 95008
+  address: '910 E Hamilton Ave, Suite 130 , Cambell Ca 95008'
   phone: 408-596-4490
   phone_type:
   phone2:
   phone2_type:
   email: Brett@TheRealExperts.com
-  url: http://www.TheRealExperts.com
-
+  url: 'http://www.TheRealExperts.com'
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: http://fillmurray.com/200/200
+  headshot_path: 'http://fillmurray.com/200/200'
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: http://eyegoop.com
-
+  url: 'http://eyegoop.com'
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/groups/377582376133886/?source_id=207449165970438
-  linkedin_url: https://www.linkedin.com/in/brettjennings/
+  facebook_url: 'https://www.facebook.com/groups/377582376133886/?source_id=207449165970438'
+  linkedin_url: 'https://www.linkedin.com/in/brettjennings/'
   gplus_url:
-  youtube_url: https://www.youtube.com/user/TheBrettJenningsTeam?feature=watch
-  twitter_url: https://twitter.com/thejenningsteam
+  youtube_url: 'https://www.youtube.com/user/TheBrettJenningsTeam?feature=watch'
+  twitter_url: 'https://twitter.com/thejenningsteam'
   instagram_url:
   pinterest_url:
   zillow_url:
   trulia_url:
   yelp_url:
   podcast_url:
-
 podcast:
-  title: 'Silicon Valley Real Estate Podcast with Brett Jennings'
-  categories: Education
+  title: Silicon Valley Real Estate Podcast with Brett Jennings
+  categories:
+    - Education
   image: /img/podcast.jpg
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Silicon Valley Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from Brett Jennings Real Estate Experts - your professional Silicon Valley Real Estate Agents.'
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in Silicon Valley, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
-  author: 'Brett Jennings'
-
+  subtitle: >-
+    Learn all the tips, tricks and more for buyers and sellers in the Silicon
+    Valley Area Real Estate Market
+  description: >-
+    If you are looking to buy or sell a home, get all the information and the
+    latest updates, tips, and tricks from Brett Jennings Real Estate Experts -
+    your professional Silicon Valley Real Estate Agents.
+  keywords: >-
+    Real Estate for sale, Real Estate agents, top real estate agents, local real
+    estate agents, find a real estate agent, houses for sale in Silicon Valley,
+    home selling tips, home for sale, home buying, home buying process, property
+    finder, property search, property, real estate market, estate agent,
+    realestate, real estate listings, buying a house, homes for sale, mls, home
+    buyer
+  author: Brett Jennings
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
-  # hero_text: Our Mission on this site is to educate Real Estate Agents on how to sell more homes.
-  hero_background_hex: '#999'
+  hero_background_hex: '#999999'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
 site_colors:
   brand_color: '#11365d'
-  theme_color: '#000'
+  theme_color: '#000000'
   theme_text_color: '#5d9bd3'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 navbar_colors:
   border_bottom:
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: '#364F81'
-
+  shadow_color: '#364f81'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
   button_padding_height_number: 15
   button_border_color: '#ffffff'
-  button_background_color: transparent
+  button_background_color: 'rgba(0, 0, 0, 0)'
   button_text_color: '#123456'
   secondary_button_border_color: '#ffffff'
   secondary_button_background_color: 'rgba(0, 0, 0, 0)'
