--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -69,7 +69,7 @@ lender:
   url: 'http://eyegoop.com'
 socials:
   review_sm_icons: false
-  facebook_url: 'https://www.facebook.com/groups/377582376133886/?source_id=207449165970438'
+  facebook_url: 'https://www.facebook.com/BeARealExpert/'
   linkedin_url: 'https://www.linkedin.com/in/brettjennings/'
   gplus_url:
   youtube_url: 'https://www.youtube.com/user/TheBrettJenningsTeam?feature=watch'
