--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,7 +7,7 @@ description: >-
 show_custom_links: true
 custom_links:
   - title: Who We Are
-    url: 'https://www.therealexperts.com/who-we-are/'
+    url: https://www.therealexperts.com/who-we-are/
   - title: Free Strategy Call
     url: /strategy-call/
   - title: Free Newsletter
@@ -16,7 +16,7 @@ custom_links:
     url: >-
       https://docs.google.com/forms/d/e/1FAIpQLSdupJkt2cjDwMzfiFaH0Sl7SdLa_cPfnolaCEiGE5O6_84HSA/viewform
   - title: Join Us
-    url: 'http://therealexperts.com/careers'
+    url: http://therealexperts.com/careers
 client:
   name: Brett Jennings
   title:
@@ -49,31 +49,31 @@ client:
   market: Bay Area
   brand: 'Real Estate Experts | DRE #01761522'
   brokerage:
-  address: '910 E Hamilton Ave, Suite 130 , Cambell Ca 95008'
+  address: 910 E Hamilton Ave, Suite 130 , Cambell Ca 95008
   phone: 408-596-4490
   phone_type:
   phone2:
   phone2_type:
   email: Brett@TheRealExperts.com
-  url: 'http://www.TheRealExperts.com'
+  url: http://www.TheRealExperts.com
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: 'http://fillmurray.com/200/200'
+  headshot_path: http://fillmurray.com/200/200
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: 'http://eyegoop.com'
+  url: http://eyegoop.com
 socials:
   review_sm_icons: false
-  facebook_url: 'https://www.facebook.com/BeARealExpert/'
-  linkedin_url: 'https://www.linkedin.com/in/brettjennings/'
+  facebook_url: https://www.facebook.com/BeARealExpert/
+  linkedin_url: https://www.linkedin.com/in/brettjennings/
   gplus_url:
-  youtube_url: 'https://www.youtube.com/user/TheBrettJenningsTeam?feature=watch'
-  twitter_url: 'https://twitter.com/thejenningsteam'
+  youtube_url: https://www.youtube.com/@realestateexperts8318
+  twitter_url: https://twitter.com/thejenningsteam
   instagram_url:
   pinterest_url:
   zillow_url:
@@ -125,8 +125,8 @@ buttons:
   button_padding_width_number: 10
   button_padding_height_number: 15
   button_border_color: '#ffffff'
-  button_background_color: 'rgba(0, 0, 0, 0)'
+  button_background_color: rgba(0, 0, 0, 0)
   button_text_color: '#123456'
   secondary_button_border_color: '#ffffff'
-  secondary_button_background_color: 'rgba(0, 0, 0, 0)'
+  secondary_button_background_color: rgba(0, 0, 0, 0)
   secondary_button_text_color: '#ffffff'
