--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,10 @@ markdown: kramdown
 #Handling Reading
 encoding: "utf-8"
 
+collections:
+  podcast:
+    output: true
+
 # Build settings
 markdown: kramdown
 kramdown:
