Updated 1 file via CloudCannon.

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -17,6 +17,8 @@ custom_links:
       https://docs.google.com/forms/d/e/1FAIpQLSdupJkt2cjDwMzfiFaH0Sl7SdLa_cPfnolaCEiGE5O6_84HSA/viewform
   - title: Join Us
     url: http://therealexperts.com/careers
+  - title: Podcasts
+    url: https://bearealexpert.com/podcasts.html
 client:
   name: Brett Jennings
   title:
