Updated 1 file via CloudCannon.

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -17,7 +17,7 @@ custom_links:
   - title: Monthly Mastermind
     url: >-
       https://docs.google.com/forms/d/e/1FAIpQLSdupJkt2cjDwMzfiFaH0Sl7SdLa_cPfnolaCEiGE5O6_84HSA/viewform
-  - title: Join Us
+  - title: Join Our Team
     url: http://therealexperts.com/careers
 client:
   name: Brett Jennings
