--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -104,7 +104,7 @@ podcast:
   author: Brett Jennings
 images:
   client_headshot_path: /img/headshot.jpg
-  hero_logo_path: /img/logo.png
+  hero_logo_path:
   logo_width_number: 40
   hero_background_hex: '#999999'
   hero_image_path: /img/background.jpg
